feat: added slider options

--- a/index.html
+++ b/index.html
@@ -40,26 +40,31 @@
         </div>
     </div>
 
-
     <div class="carousel">
         <div class="carousel-inner">
             <div class="slide" data-idx="0" data-pos="0">
+                <span>1</span>
                 <img src="./images/img-01.jpg" alt="">
             </div>
             <div class="slide" data-idx="1" data-pos="1">
+                <span>2</span>
                 <img src="./images/img-02.jpg" alt="">
             </div>
             <div class="slide" data-idx="2" data-pos="2">
+                <span>3</span>
                 <img src="./images/img-03.jpg" alt="">
             </div>
             <div class="slide" data-idx="3" data-pos="-2">
+                <span>4</span>
                 <img src="./images/img-04.jpg" alt="">
             </div>
             <div class="slide" data-idx="4" data-pos="-1">
+                <span>5</span>
                 <img src="./images/img-05.jpg" alt="">
             </div>
         </div>
     </div>
+
     <div class="controls">
         <button id="prevBtn">prev</button>
         <button id="nextBtn">next</button>
