docs: changed project title

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon/favicon-16x16.png">
     <link rel="stylesheet" href="./css/style.min.css">
-    <title>vanilla-carousel</title>
+    <title>vanilla-carousel-demo</title>
 </head>
 <body>
 
 <div id="wrap" class="wrap">
     <header>
-        <h1>No Library Carousel</h1>
-        <a href="https://github.com/happycodehouse/vanilla-carousel" rel="noopener noreferrer" target="_blank">GitHub</a>
+        <h1>Vanilla Carousel Demo</h1>
+        <a href="https://github.com/happycodehouse/vanilla-carousel-demo" rel="noopener noreferrer" target="_blank">GitHub</a>
         <p>Images sourced from <a href="https://www.eesookee.com/" rel="noopener noreferrer" target="_blank">eesookee.com</a></p>
     </header>
     <div class="carousel-option">
